--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "nodemailer": "^6.9.8",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
