--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.4",
     "next": "14.0.4",
-    "nodemailer": "^6.9.8",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
@@ -24,6 +24,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
